--- a/views/index.twig
+++ b/views/index.twig
@@ -5,7 +5,10 @@
 {% endblock %}
 
 {% block page %}
-	Hexanod
+	<h1>
+		Hexanod:
+		<span id="hexanod-version">0.0</span>
+	</h1>
 {% endblock %}
 
 {% block stylesheet %}
@@ -22,6 +25,6 @@
 {% block container %}
 	<button id="myButton">Cliquez ici</button>
 	<div class="fixed-bottom content">
-		<textarea class="form-control" id="mytext" rows="3"></textarea>
+		<textarea class="form-control" id="console" rows="3"></textarea>
 	</div>
 {% endblock %}
