--- a/views/layout/base.twig
+++ b/views/layout/base.twig
@@ -21,8 +21,7 @@
 
 	<body>
 		<header class="content">
-			<h1>{%- block page ''-%}</h1>
-
+			{%- block page ''-%}
 		</header>
 
 		<div class="sidebar">
